# Pi5IR

./: .pre-commit-config.yaml  pyproject.toml  release.sh
src/pi5ir/: __init__.py  cli.py  decode.py  encode.py  io.py  prettify.py  remote.py  util.py
src/pi5ir/remotes/: hitachi_rar_8p2.py
tests/: test_decode.py  test_prettify.py
